# vmaf-viewer

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  extract_vmaf_frame_bundle.py  issues.md  issues.txt  metadata.txt  mono  pyproject.toml  vmaf_compare.sh
devscripts/: explore_watermark_detection.py  extract_frame.py  extract_frame.sh  extract_vmaf_frame_bundle.py  fetch_echarts.py  test_vmaf_methods.sh
docs/: bilibili-watermark-detection-research.md  ffmpeg_help_libvamf.txt  fps-filter-pts-normalization-side-effect.md  issues.md  local-zoom-dual-axis-design.md  review-uncommitted-changes.md  sub_metric_ranges.md  vmaf-csv-structure.md  vmaf-zero-score-issue.md  vmaf_schema.csvw.json  vmaf_schema.json  vmaf_schema.xsd
docs/superpowers/plans/: 2026-06-13-vmaf-json-viewer.md  2026-06-19-distribution-boxplot.md  2026-06-19-persistent-messages-status.md
docs/superpowers/specs/: 2026-06-13-vmaf-json-viewer-design.md  2026-06-16-messages-status-design.md  2026-06-19-distribution-boxplot-design.md  2026-06-27-primary-vmaf-on-demand-loading-design.md  2026-07-17-incremental-download-contract-design.md
scripts/: fetch_echarts.py
src/vmaf_viewer/: __init__.py  app.py  cache.py  compare.py  models.py  parser.py  scanner.py  stats.py
src/vmaf_viewer/static/: app.js  index.html  message_state.js  metric_metadata.js  styles.css
src/vmaf_workflow/: README.md  bbdown.py  cleanup.py  cli.py  config.py  download.py  download_state.py  manifest.py  models.py  packager.py  pipeline.py  prepare.py  project.py  remote_plan.py  remote_state.py  remote_transport.py  remote_workflow.py  runner.py  status.py  tui.py  watermark_detection.py  ytdlp.py
tests/: test_api.py  test_cli.py  test_compare.py  test_fetch_echarts.py  test_frontend_static.py  test_parser.py  test_rglob_skip_dot_dirs.py  test_scanner.py  test_static_distribution_layout.py  test_stats.py  test_watermark_detection_experiment.py  test_workflow_bbdown.py  test_workflow_cleanup.py  test_workflow_cli.py  test_workflow_config.py  test_workflow_download_state.py  test_workflow_e2e.py  test_workflow_pipeline.py  test_workflow_project.py  test_workflow_remote.py  test_workflow_runner_manifest.py  test_workflow_status.py  test_workflow_tui.py  test_workflow_watermark.py  test_workflow_ytdlp.py
tests/fixtures/: alpha_vmaf.json  beta_vmaf.json  not_vmaf.txt
tests/static/: README.md  browser_harness.mjs  browser_harness.test.mjs  chart_options.test.mjs  message_state.test.mjs  metric_metadata.test.cjs  metric_metadata.test.mjs
