[project]
name = "vmaf-json-viewer"
version = "0.2.0"
description = "Local web viewer for comparing libvmaf JSON, CSV, or XML outputs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
dependencies = [
    "fastapi>=0.115.0",
    "lxml>=6.1.1",
    "opencv-python-headless>=5.0.0.93",
    "orjson>=3.10.0",
    "textual>=6.6,<7",
    "uvicorn[standard]>=0.30.0",
    "natsort>=8.4.0",
]

[project.scripts]
vmaf-viewer = "vmaf_viewer.app:main"
vmaf-workflow = "vmaf_workflow.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/vmaf_viewer", "src/vmaf_workflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
]
